--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   todo-app:
-    image: vikyath11/todo-app-artifactory
+    image: vikyath11/todo-app-artifactory:v4
     ports:
       - "3001:3001"
     deploy:
@@ -12,7 +12,7 @@ services:
           - node.labels.type == todoworker
 
   calc-app:
-    image: vikyath11/vikyath-artifactory
+    image: vikyath11/vikyath-artifactory:v37
     ports:
       - "3000:3000"
     deploy:
